--- a/budget-tracker-frontend/src/app/login/login.component.html
+++ b/budget-tracker-frontend/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <h2>Login</h2>
   <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
     <div>
-      <label>Email</label>
+      <label>Username</label>
       <input type="text" name="username" [(ngModel)]="username" required>
     </div>
     <div>
