show data for current month

--- a/budget-tracker-frontend/src/app/budget/budget.component.html
+++ b/budget-tracker-frontend/src/app/budget/budget.component.html
@@ -100,7 +100,7 @@
 </table>
 
 <div *ngIf="!loading && budgets.length === 0" class="alert alert-info">
-  No categories found.
+  No budget found.
 </div>
       
     
